Products.CMFCore Changelog
==========================

2.2.0 (unreleased)
------------------

- FSPageTemplate: Change the charset/encoding detection to consider 
  charset specifications in the content type, and replace the
  hardcoded Latin-15 fallback with the mechanism used by the 
  Products.PageTemplate code, which can be influenced by setting
  the environment variable "ZPT_PREFERRED_ENCODING"
  (https://bugs.launchpad.net/zope-cmf/+bug/322263)

- Expose the ZMI manage view of the `_components ` object manager as
  a new "Components Folder" tab in the ZMI.

- ActionsTool: The "Action Providers" tab in the ZMI did not render
  actions from the WorkflowTool correctly since those are not 
  "new-style" actions.
  (https://bugs.launchpad.net/zope-cmf/+bug/322300)

- FSPageTemplate: Prevent reading the underlying file without doing 
  anything with the data in some cases.

- FSObject: Ensure that ZCache invalidations only happens if the 
  filesystem modification time differs from the internally stored
  previous modification time.
  (https://bugs.launchpad.net/zope-cmf/+bug/325246)

- TypeInformation: DCWorkflow instances define a method and a guard 
  for vetoing object creation, but it was never used. Now  
  TypeInformation objects will consult these guard conditions during 
  object creation.
  (https://bugs.launchpad.net/zope-cmf/+bug/308947)

- PortalCatalog: Changed to use a multi-adaptor to allow a pluggable
  IndexableObjectWrapper class.  Objects that implement IIndexableObject
  are not wrapped.  The change will assist in integrating with
  other indexing strategies from third-party packages.

- Events: Changed 'handleContentishEvent' behavior for IObjectCopiedEvent.
  'WorkflowTool.notifyCreated' no longer resets the workflow state, so the
  the event subscriber clears the workflow history instead.

- WorkflowTool: 'notifyCreated' no longer overrides assigned workflow states.
