@@ -34,4 +34,9 @@
       global="False"
       />
 
+  <utility
+      component=".MemberDataTool.memberFactory"
+      name="MemberData"
+      />
+
 </configure>
