@@ -4,6 +4,12 @@ Products.CMFCore Changelog
 2.2.0 (unreleased)
 ------------------
 
+- MemberData tool: Make it easier to override the default 
+  MemberData implementation by trying to look up a named 
+  factory utility named "MemberData" before falling back on the
+  default MemberData class.
+  (https://bugs.launchpad.net/zope-cmf/+bug/377208)
+
 - FSPageTemplate: Change the charset/encoding detection to consider 
   charset specifications in the content type, and replace the
   hardcoded Latin-15 fallback with the mechanism used by the 
